Fix overflow not working on firefox

--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -60,8 +60,11 @@ table {
 }
 
 td {
-	overflow-x: scroll;
 	white-space: nowrap;
+}
+
+div.cell-wrapper {
+	overflow: scroll;
 }
 
 th, td {
